// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Credit should render an external credit 1`] = `
<div>
   
  <a
    className="tag anchor"
    href="https://curiousprogrammer.dev"
    rel="nofollow noopener noreferrer"
    target="_blank"
    title="Curious Programmer"
  >
    curious programmer
  </a>
   
  Curious Programmer
</div>
`;

exports[`Credit should render an internal credit 1`] = `
<div>
   
  <a
    className="tag anchor"
    href="/blog"
    onClick={[Function]}
    onMouseEnter={[Function]}
    title="Curious Programmer"
  >
    curious programmer
  </a>
   
  Curious Programmer
</div>
`;

exports[`Credit should use the title for its empty body 1`] = `
<div>
  <span>
    use me instead.
  </span>
  Use me instead.
</div>
`;
